welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:0: error: not enough arguments for method growFlowers: (v: java.awt.Color)Unit.
Unspecified value parameter v.
	    growFlowers();
                       ^