welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def growFlowers(v: Color){
	marque(v);avance();marque(Color.YELLOW);avance();marque(v);recule();droite();avance();marque(v);recule(2);marque(v);
}

def marque(c: Color){setCouleurBrosse(c);baisseBrosse();leveBrosse()}
growFlowers(Color.RED);